--- a/pom.xml
+++ b/pom.xml
@@ -158,10 +158,10 @@
                     <includes>
                         <include>**/*TestSuite.*</include>
                     </includes>
-                    <parallel>methods</parallel>
-                    <threadCount>4</threadCount>
-                    <perCoreThreadCount>false</perCoreThreadCount>
-                    <useUnlimitedThreads>true</useUnlimitedThreads>
+<!--                    <parallel>methods</parallel>-->
+<!--                    <threadCount>4</threadCount>-->
+<!--                    <perCoreThreadCount>false</perCoreThreadCount>-->
+<!--                    <useUnlimitedThreads>true</useUnlimitedThreads>-->
 <!--                    <rerunFailingTestsCount>1</rerunFailingTestsCount>-->
                 </configuration>
                 <executions>
