--- a/src/test/resources/serenity.conf
+++ b/src/test/resources/serenity.conf
@@ -1,5 +1,5 @@
 webdriver {
-  driver = firefox
+  driver = chrome
   wait.for.timeout = 150000
   timeouts.implicitlywait = 100
   timeouts.fluentwait = 500
